# DL_from_scratch

./: .clang-format  .gitignore  CMakeLists.txt
include/: derivative.hpp  variable.hpp
include/function/: exp.hpp  function.hpp  square.hpp
src/: variable.cpp
tests/: test_back_prop.cpp  test_derivative.cpp  test_function.cpp  test_variable.cpp
